--- a/ApiECHO/Base.lproj/Main.storyboard
+++ b/ApiECHO/Base.lproj/Main.storyboard
@@ -17,18 +17,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="sQl-ok-q0A">
+                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="sQl-ok-q0A">
                                 <rect key="frame" x="50" y="267.5" width="275" height="132"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dma-4c-jpq">
                                         <rect key="frame" x="0.0" y="0.0" width="275" height="51"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                        <state key="normal" title="Login"/>
+                                        <state key="normal" title="Log In"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVB-4E-mdD">
                                         <rect key="frame" x="0.0" y="81" width="275" height="51"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <state key="normal" title="Sign Up"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5W0-wS-1dV">
+                                <rect key="frame" x="20" y="40" width="335" height="217"/>
+                                <subviews>
+                                    <textField opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IKp-tB-L61">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="38"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mM5-yZ-Lim">
+                                        <rect key="frame" x="0.0" y="58" width="335" height="39"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yAf-nQ-74f">
+                                        <rect key="frame" x="0.0" y="117" width="335" height="38"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJr-PK-ieG">
+                                        <rect key="frame" x="0.0" y="175" width="335" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <state key="normal" title="Button"/>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -38,16 +66,40 @@
                             <constraint firstItem="sQl-ok-q0A" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="84a-JK-eeT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sQl-ok-q0A" secondAttribute="trailing" constant="50" id="8du-Jp-C1C"/>
                             <constraint firstItem="sQl-ok-q0A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="8np-qK-sOh"/>
+                            <constraint firstItem="5W0-wS-1dV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="8vH-yx-crL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5W0-wS-1dV" secondAttribute="trailing" constant="20" id="Pnt-7e-PJ3"/>
+                            <constraint firstItem="5W0-wS-1dV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="x34-Mg-mQL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="emailTextField" destination="mM5-yZ-Lim" id="mC7-8D-vFM"/>
+                        <outlet property="formStackView" destination="5W0-wS-1dV" id="cJj-BJ-pFI"/>
                         <outlet property="loginButton" destination="dma-4c-jpq" id="5jD-BX-gnR"/>
+                        <outlet property="loginSignuoStackView" destination="sQl-ok-q0A" id="ikA-y6-qiT"/>
+                        <outlet property="nameTextField" destination="IKp-tB-L61" id="rBB-Qp-ui9"/>
+                        <outlet property="passwordTextField" destination="yAf-nQ-74f" id="bET-tY-kKi"/>
+                        <outlet property="signFormButton" destination="uJr-PK-ieG" id="sL5-zq-UIJ"/>
                         <outlet property="signupButton" destination="bVB-4E-mdD" id="CuB-XX-ra0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="s9c-sy-FTO">
+            <objects>
+                <viewController id="wxk-0y-6Rz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L5C-Xm-sCB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="7eh-Ot-YhJ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9xY-Z0-Wu9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="950" y="27"/>
         </scene>
     </scenes>
 </document>
