Renamed some methods.

--- a/ApiECHO/Base.lproj/Main.storyboard
+++ b/ApiECHO/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <action selector="formButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZN1-b0-rTv"/>
+                                            <action selector="signFormButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZN1-b0-rTv"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -94,6 +94,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wcU-ht-GL9">
+            <objects>
+                <viewController id="gmI-ja-GSn" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0lK-OC-EEq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Hfd-uY-J7z"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m0g-ax-8NH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="887" y="27"/>
         </scene>
     </scenes>
 </document>
