--- a/ApiECHO/Base.lproj/Main.storyboard
+++ b/ApiECHO/Base.lproj/Main.storyboard
@@ -94,21 +94,39 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="239" y="89"/>
         </scene>
-        <!--View Controller-->
+        <!--Text View Controller-->
         <scene sceneID="wcU-ht-GL9">
             <objects>
-                <viewController id="gmI-ja-GSn" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextViewController" id="gmI-ja-GSn" customClass="TextViewController" customModule="ApiECHO" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0lK-OC-EEq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Loading..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Jj1-V5-dmq">
+                                <rect key="frame" x="10" y="30" width="355" height="627"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Hfd-uY-J7z" firstAttribute="bottom" secondItem="Jj1-V5-dmq" secondAttribute="bottom" constant="10" id="UcI-5X-REB"/>
+                            <constraint firstItem="Jj1-V5-dmq" firstAttribute="leading" secondItem="Hfd-uY-J7z" secondAttribute="leading" constant="10" id="gmq-Up-Okm"/>
+                            <constraint firstItem="Jj1-V5-dmq" firstAttribute="top" secondItem="Hfd-uY-J7z" secondAttribute="top" constant="10" id="hlx-kB-HNp"/>
+                            <constraint firstItem="Hfd-uY-J7z" firstAttribute="trailing" secondItem="Jj1-V5-dmq" secondAttribute="trailing" constant="10" id="sz4-Hi-Mj4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hfd-uY-J7z"/>
                     </view>
+                    <connections>
+                        <outlet property="textView" destination="Jj1-V5-dmq" id="XOI-Zy-4so"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m0g-ax-8NH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="887" y="27"/>
+            <point key="canvasLocation" x="918" y="119"/>
         </scene>
     </scenes>
 </document>
